The part of ch to en halfway processed.

--- a/src/Makefile
+++ b/src/Makefile
@@ -101,7 +101,8 @@ am__installdirs = "$(DESTDIR)$(libexecdir)" \
 	"$(DESTDIR)$(componentdir)"
 PROGRAMS = $(libexec_PROGRAMS)
 am_ibus_engine_ez_OBJECTS = ibus_engine_ez-hello.$(OBJEXT) \
-	ibus_engine_ez-engine.$(OBJEXT) ibus_engine_ez-dict.$(OBJEXT)
+	ibus_engine_ez-engine.$(OBJEXT) ibus_engine_ez-dict.$(OBJEXT) \
+	ibus_engine_ez-en_buffer.$(OBJEXT)
 ibus_engine_ez_OBJECTS = $(am_ibus_engine_ez_OBJECTS)
 ibus_engine_ez_DEPENDENCIES =
 AM_V_P = $(am__v_P_$(V))
@@ -120,6 +121,7 @@ DEFAULT_INCLUDES = -I.
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__maybe_remake_depfiles = depfiles
 am__depfiles_remade = ./$(DEPDIR)/ibus_engine_ez-dict.Po \
+	./$(DEPDIR)/ibus_engine_ez-en_buffer.Po \
 	./$(DEPDIR)/ibus_engine_ez-engine.Po \
 	./$(DEPDIR)/ibus_engine_ez-hello.Po
 am__mv = mv -f
@@ -292,7 +294,7 @@ target_alias =
 top_build_prefix = ../
 top_builddir = ..
 top_srcdir = ..
-ibus_engine_ez_SOURCES = hello.cpp engine.cpp dict.cpp
+ibus_engine_ez_SOURCES = hello.cpp engine.cpp dict.cpp en_buffer.cpp
 ibus_engine_ez_CPPFLAGS = \
 	-pthread -I/usr/include/ibus-1.0 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include 
 
@@ -397,6 +399,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 include ./$(DEPDIR)/ibus_engine_ez-dict.Po # am--include-marker
+include ./$(DEPDIR)/ibus_engine_ez-en_buffer.Po # am--include-marker
 include ./$(DEPDIR)/ibus_engine_ez-engine.Po # am--include-marker
 include ./$(DEPDIR)/ibus_engine_ez-hello.Po # am--include-marker
 
@@ -461,6 +464,20 @@ ibus_engine_ez-dict.obj: dict.cpp
 #	$(AM_V_CXX)source='dict.cpp' object='ibus_engine_ez-dict.obj' libtool=no \
 #	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) \
 #	$(AM_V_CXX_no)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ibus_engine_ez_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ibus_engine_ez-dict.obj `if test -f 'dict.cpp'; then $(CYGPATH_W) 'dict.cpp'; else $(CYGPATH_W) '$(srcdir)/dict.cpp'; fi`
+
+ibus_engine_ez-en_buffer.o: en_buffer.cpp
+	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ibus_engine_ez_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ibus_engine_ez-en_buffer.o -MD -MP -MF $(DEPDIR)/ibus_engine_ez-en_buffer.Tpo -c -o ibus_engine_ez-en_buffer.o `test -f 'en_buffer.cpp' || echo '$(srcdir)/'`en_buffer.cpp
+	$(AM_V_at)$(am__mv) $(DEPDIR)/ibus_engine_ez-en_buffer.Tpo $(DEPDIR)/ibus_engine_ez-en_buffer.Po
+#	$(AM_V_CXX)source='en_buffer.cpp' object='ibus_engine_ez-en_buffer.o' libtool=no \
+#	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) \
+#	$(AM_V_CXX_no)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ibus_engine_ez_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ibus_engine_ez-en_buffer.o `test -f 'en_buffer.cpp' || echo '$(srcdir)/'`en_buffer.cpp
+
+ibus_engine_ez-en_buffer.obj: en_buffer.cpp
+	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ibus_engine_ez_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ibus_engine_ez-en_buffer.obj -MD -MP -MF $(DEPDIR)/ibus_engine_ez-en_buffer.Tpo -c -o ibus_engine_ez-en_buffer.obj `if test -f 'en_buffer.cpp'; then $(CYGPATH_W) 'en_buffer.cpp'; else $(CYGPATH_W) '$(srcdir)/en_buffer.cpp'; fi`
+	$(AM_V_at)$(am__mv) $(DEPDIR)/ibus_engine_ez-en_buffer.Tpo $(DEPDIR)/ibus_engine_ez-en_buffer.Po
+#	$(AM_V_CXX)source='en_buffer.cpp' object='ibus_engine_ez-en_buffer.obj' libtool=no \
+#	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) \
+#	$(AM_V_CXX_no)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(ibus_engine_ez_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ibus_engine_ez-en_buffer.obj `if test -f 'en_buffer.cpp'; then $(CYGPATH_W) 'en_buffer.cpp'; else $(CYGPATH_W) '$(srcdir)/en_buffer.cpp'; fi`
 install-componentDATA: $(component_DATA)
 	@$(NORMAL_INSTALL)
 	@list='$(component_DATA)'; test -n "$(componentdir)" || list=; \
@@ -611,6 +628,7 @@ clean-am: clean-generic clean-libexecPROGRAMS mostlyclean-am
 
 distclean: distclean-am
 		-rm -f ./$(DEPDIR)/ibus_engine_ez-dict.Po
+	-rm -f ./$(DEPDIR)/ibus_engine_ez-en_buffer.Po
 	-rm -f ./$(DEPDIR)/ibus_engine_ez-engine.Po
 	-rm -f ./$(DEPDIR)/ibus_engine_ez-hello.Po
 	-rm -f Makefile
@@ -659,6 +677,7 @@ installcheck-am:
 
 maintainer-clean: maintainer-clean-am
 		-rm -f ./$(DEPDIR)/ibus_engine_ez-dict.Po
+	-rm -f ./$(DEPDIR)/ibus_engine_ez-en_buffer.Po
 	-rm -f ./$(DEPDIR)/ibus_engine_ez-engine.Po
 	-rm -f ./$(DEPDIR)/ibus_engine_ez-hello.Po
 	-rm -f Makefile
